Added basic pages for create and view company profile

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1291,3 +1291,9 @@ h6 {
 .form-group {
   padding: 16px;
 }
+/*--------------------------------------------------------------
+# Users
+--------------------------------------------------------------*/
+.action-col {
+  width: 12%;
+}
