--- a/src/main/resources/templates/leave_details.html
+++ b/src/main/resources/templates/leave_details.html
@@ -87,12 +87,7 @@
                             </div>
 
                             <!-- Submit -->
-                            <div class="row mb-3">
-                                <div class="col-sm-10">
-                                    <button type="submit"
-                                            class="btn btn-primary">Submit</button>
-                                </div>
-                            </div>
+                            <div th:replace="~{submit_button}"></div>
                         </form>
                     </div>
                 </div>
