--- a/src/main/resources/templates/scripts.html
+++ b/src/main/resources/templates/scripts.html
@@ -2,6 +2,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script th:src="@{/vendor/apexcharts/apexcharts.min.js}"></script>
 <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.js}"></script>
 <script th:src="@{/vendor/chart.js/chart.umd.js}"></script>
 <script th:src="@{/vendor/echarts/echarts.min.js}"></script>
 <script th:src="@{/vendor/quill/quill.js}"></script>
