--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -205,8 +205,8 @@
                                                             <div class="col-sm-3">
                                                                 <strong>Joining Date</strong>
                                                             </div>
-                                                            <div class="col-sm-3">
-                                                                <label th:text="${user.jobInformation.getJoiningDateString()}"></label>
+                                                            <div class="col-sm-3" th:if="${user.jobInformation != null}">
+                                                                <label th:text="${user.jobInformation.joiningDateString}"></label>
                                                             </div>
                                                         </div>
                                                         <!-- Designation -->
@@ -214,7 +214,7 @@
                                                             <div class="col-sm-3">
                                                                 <strong>Designation</strong>
                                                             </div>
-                                                            <div class="col-sm-3">
+                                                            <div class="col-sm-3" th:if="${user.jobInformation != null}">
                                                                 <label th:text="${user.jobInformation.designation}"></label>
                                                             </div>
                                                         </div>
@@ -223,7 +223,7 @@
                                                             <div class="col-sm-3">
                                                                 <strong>Basic Salary</strong>
                                                             </div>
-                                                            <div class="col-sm-3">
+                                                            <div class="col-sm-3" th:if="${user.jobInformation != null}">
                                                                 <label th:text="${user.jobInformation.getBasicSalaryString()}"></label>
                                                             </div>
                                                         </div>
@@ -233,8 +233,8 @@
                                                             <div class="col-sm-3">
                                                                 <strong>Conveyance Allowance</strong>
                                                             </div>
-                                                            <div class="col-sm-3">
-                                                                <label th:text="${user.jobInformation.getConveyanceAllowanceString()}"></label>
+                                                            <div class="col-sm-3" th:if="${user.jobInformation != null}">
+                                                                <label th:text="${user.jobInformation.conveyanceAllowanceString}"></label>
                                                             </div>
                                                         </div>
 
@@ -243,8 +243,8 @@
                                                             <div class="col-sm-3">
                                                                 <strong>Conveyance Allowance</strong>
                                                             </div>
-                                                            <div class="col-sm-3">
-                                                                <label th:text="${user.jobInformation.getMedicalReimbursementString()}"></label>
+                                                            <div class="col-sm-3" th:if="${user.jobInformation != null}">
+                                                                <label th:text="${user.jobInformation.medicalReimbursementString}"></label>
                                                             </div>
                                                         </div>
 
@@ -253,17 +253,27 @@
                                                             <div class="col-sm-3">
                                                                 <strong>House Rent</strong>
                                                             </div>
-                                                            <div class="col-sm-3">
-                                                                <label th:text="${user.jobInformation.getHouseRentString()}"></label>
+                                                            <div class="col-sm-3" th:if="${user.jobInformation != null}">
+                                                                <label th:text="${user.jobInformation.houseRentString}"></label>
                                                             </div>
                                                         </div>
                                                         <!-- Action -->
-                                                        <div class="row mb-3">
-                                                            <div class="col-sm-3">
-                                                                <strong>House Rent</strong>
-                                                            </div>
-                                                            <div class="col-sm-3">
-                                                                <label th:text="${user.jobInformation.getHouseRentString()}"></label>
+                                                        <div class="form-floating">
+                                                            <div class="form-group row">
+                                                                <div class="col-sm-6">
+                                                                    <input type="submit"
+                                                                           class="btn btn-primary"
+                                                                           name="action"
+                                                                           value="submit"/>
+                                                                </div>
+
+                                                                <div class="col-sm-6">
+                                                                    <input type="submit"
+                                                                           class="btn btn-secondary"
+                                                                           name="action"
+                                                                           value="close"
+                                                                           data-bs-dismiss="modal"/>
+                                                                </div>
                                                             </div>
                                                         </div>
                                                     </div>
