--- a/src/main/resources/templates/designation_details.html
+++ b/src/main/resources/templates/designation_details.html
@@ -23,6 +23,9 @@
                           th:action="@{/edit}"
                           th:object="${designationDto}"
                           method="post">
+                        <input type="hidden"
+                               name="selectedDesignationId"
+                               th:value="${designationId}">
                         <div class="row">
                             <div class="col-sm-10">
                                 <div class="form-floating mb-3">
