--- a/src/main/resources/templates/edit_Company_profile.html
+++ b/src/main/resources/templates/edit_Company_profile.html
@@ -28,30 +28,26 @@
                              class="alert alert-success">
                         </div>
 
-                        <form th:action="@{/createCompanyProfile}"
+                        <form th:action="@{/editCompanyProfile}"
                               th:object="${jobInformationDto}"
                               method="post">
                             <input type="hidden"
-                                   name="selectedUserId"
-                                   th:value="${selectedUserIdselectedUserId}" >
+                                   th:field="*{user}">
+
+
 
                             <input type="hidden"
-                                   th:field="*{user}" >
+                                   th:field="*{currency}">
 
                             <!-- Joining Date-->
                             <div class="row mb-3">
-                                <label for="JoiningDate"
-                                       class="col-sm-2 col-form-label">Joining Date</label>
-                                <div class="col-sm-10">
-                                    <input type="date"
-                                           id="JoiningDate"
-                                           class="form-control"
+                                <div class="col-sm-3">
+                                    <label>Joining Date</label>
+                                </div>
+                                <div class="col-sm-3" >
+                                    <label th:text="*{getFormattedJoiningDate()}"></label>
+                                    <input type="hidden"
                                            th:field="*{joiningDate}">
-                                    <span th:if="${#fields.hasErrors('joiningDate')}"
-                                          th:errors="*{joiningDate}"
-                                          class="error">
-                                        something
-                                    </span>
                                 </div>
                             </div>
 
@@ -75,31 +71,34 @@
                             </div>
 
                             <!-- Currency -->
-                            <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">Salary Currency</label>
-                                <div class="col-sm-10">
-                                    <select class="form-select"
-                                            aria-label="Default select example"
-                                            id="CurrencyDropdownMenu"
-                                            th:field="*{currency}">
-                                        <option th:value="${null}" selected>Please Select</option>
-                                        <div th:each="currency: ${T(maks.erp.system.enums.Currency).values()}">
-                                            <option th:value="${currency}"
-                                                    th:text="${currency.sign}"></option>
-                                        </div>
-                                    </select>
-                                    <span th:if="${#fields.hasErrors('currency')}"
-                                          th:errors="*{currency}"
-                                          class="error"></span>
-                                </div>
-                            </div>
+
+<!--                            <div class="row mb-3">-->
+<!--                                <label class="col-sm-2 col-form-label">Salary Currency</label>-->
+<!--                                <div class="col-sm-10">-->
+<!--                                    <label></label>-->
+<!--&lt;!&ndash;                                    <select class="form-select"&ndash;&gt;-->
+<!--&lt;!&ndash;                                            aria-label="Default select example"&ndash;&gt;-->
+<!--&lt;!&ndash;                                            id="CurrencyDropdownMenu"&ndash;&gt;-->
+<!--&lt;!&ndash;                                            th:field="*{currency}">&ndash;&gt;-->
+<!--&lt;!&ndash;                                        <option th:value="${null}" selected>Please Select</option>&ndash;&gt;-->
+<!--&lt;!&ndash;                                        <div th:each="currency: ${T(maks.erp.system.enums.Currency).values()}">&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <option th:value="${currency}"&ndash;&gt;-->
+<!--&lt;!&ndash;                                                    th:text="${currency.sign}"></option>&ndash;&gt;-->
+<!--&lt;!&ndash;                                        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                    </select>&ndash;&gt;-->
+<!--                                    <span th:if="${#fields.hasErrors('currency')}"-->
+<!--                                          th:errors="*{currency}"-->
+<!--                                          class="error"></span>-->
+<!--                                </div>-->
+<!--                            </div>-->
 
                             <!-- Basic Salary -->
                             <div class="row mb-3">
                                 <label class="col-sm-2 col-form-label">Basic Salary</label>
                                 <div class="col-sm-10">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
+                                        <span class="input-group-text currencySign"
+                                              th:text="*{currency.sign}"></span>
                                         <input type="text" class="form-control"
                                                aria-label="Amount (to the nearest dollar)"
                                                th:field="*{basic}">
@@ -116,7 +115,8 @@
                                 <label class="col-sm-2 col-form-label">Conveyance allowance</label>
                                 <div class="col-sm-10">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
+                                        <span class="input-group-text currencySign"
+                                              th:text="*{currency.sign}"></span>
                                         <input type="text" class="form-control"
                                                aria-label="Amount (to the nearest dollar)"
                                                th:field="*{conveyanceAllowance}">
@@ -130,7 +130,8 @@
                                 <label class="col-sm-2 col-form-label">Medical Reimbursement</label>
                                 <div class="col-sm-10">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
+                                        <span class="input-group-text currencySign"
+                                              th:text="*{currency.sign}"></span>
                                         <input type="text" class="form-control"
                                                aria-label="Amount (to the nearest dollar)"
                                                th:field="*{medicalReimbursement}">
@@ -144,7 +145,8 @@
                                 <label class="col-sm-2 col-form-label">House Rent</label>
                                 <div class="col-sm-10">
                                     <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
+                                        <span class="input-group-text currencySign"
+                                              th:text="*{currency.sign}"></span>
                                         <input type="text" class="form-control"
                                                aria-label="Amount (to the nearest dollar)"
                                                th:field="*{houseRent}">
