--- a/src/main/resources/templates/create_company_profile.html
+++ b/src/main/resources/templates/create_company_profile.html
@@ -37,23 +37,8 @@
 
                             <input type="hidden"
                                    th:field="*{user}" >
-
-                            <!-- Joining Date-->
-                            <div class="row mb-3">
-                                <label for="JoiningDate"
-                                       class="col-sm-2 col-form-label">Joining Date</label>
-                                <div class="col-sm-10">
-                                    <input type="date"
-                                           id="JoiningDate"
-                                           class="form-control"
-                                           th:field="*{joiningDate}">
-                                    <span th:if="${#fields.hasErrors('joiningDate')}"
-                                          th:errors="*{joiningDate}"
-                                          class="error">
-                                        something
-                                    </span>
-                                </div>
-                            </div>
+                            <!-- Joining Date -->
+                            <div th:include="fragments/date_fragment :: calender_input(fieldName='joiningDate', title='Joining Date')"></div>
 
                             <!-- Designation -->
                             <div class="row mb-3">
@@ -94,64 +79,10 @@
                                 </div>
                             </div>
 
-                            <!-- Basic Salary -->
-                            <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">Basic Salary</label>
-                                <div class="col-sm-10">
-                                    <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
-                                        <input type="text" class="form-control"
-                                               aria-label="Amount (to the nearest dollar)"
-                                               th:field="*{basic}">
-                                        <span class="input-group-text">.00</span>
-                                    </div>
-                                    <span th:if="${#fields.hasErrors('basic')}"
-                                          th:errors="*{basic}"
-                                          class="error"></span>
-                                </div>
-                            </div>
-
-                            <!-- Conveyance allowance -->
-                            <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">Conveyance allowance</label>
-                                <div class="col-sm-10">
-                                    <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
-                                        <input type="text" class="form-control"
-                                               aria-label="Amount (to the nearest dollar)"
-                                               th:field="*{conveyanceAllowance}">
-                                        <span class="input-group-text">.00</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Medical Reimbursement -->
-                            <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">Medical Reimbursement</label>
-                                <div class="col-sm-10">
-                                    <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
-                                        <input type="text" class="form-control"
-                                               aria-label="Amount (to the nearest dollar)"
-                                               th:field="*{medicalReimbursement}">
-                                        <span class="input-group-text">.00</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- House Rent -->
-                            <div class="row mb-3">
-                                <label class="col-sm-2 col-form-label">House Rent</label>
-                                <div class="col-sm-10">
-                                    <div class="input-group mb-3">
-                                        <span class="input-group-text currencySign">৳</span>
-                                        <input type="text" class="form-control"
-                                               aria-label="Amount (to the nearest dollar)"
-                                               th:field="*{houseRent}">
-                                        <span class="input-group-text">.00</span>
-                                    </div>
-                                </div>
-                            </div>
+                            <div th:include="fragments/create_job_info_fragments :: input_field(fieldName='basic', title='Basic Salary')"></div>
+                            <div th:include="fragments/create_job_info_fragments :: input_field(fieldName='conveyanceAllowance', title='Conveyance allowance')"></div>
+                            <div th:include="fragments/create_job_info_fragments :: input_field(fieldName='medicalReimbursement', title='Medical Reimbursement')"></div>
+                            <div th:include="fragments/create_job_info_fragments :: input_field(fieldName='houseRent', title='House Rent')"></div>
 
                             <!-- Submit -->
                             <div th:replace="~{submit_button}"></div>
